@@ -43,17 +43,6 @@
 #if MYSQL_VERSION_ID < SQL_STATE_VERSION
 #define mysql_sqlstate(svsock) (NULL)
 #endif
-/*
- * This is the versions of libmysql that supports MySQL Fabric.
-*/
-#define LIBMYSQL_FABRIC_VERSION 60200
-#define LIBMYSQL_LAST_FABRIC_VERSION 69999
-
-#if LIBMYSQL_VERSION_ID >= LIBMYSQL_FABRIC_VERSION && LIBMYSQL_VERSION_ID <= LIBMYSQL_LAST_FABRIC_VERSION
-#define FABRIC_SUPPORT 1
-#else
-#define FABRIC_SUPPORT 0
-#endif
 
 #if MYSQL_VERSION_ID < WARNING_COUNT_VERSION
 #define mysql_warning_count(svsock) 0
